--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -40,6 +40,8 @@ body{
             display: flex;
             flex-direction: column;
             img{
+                width: 100%;
+                height: 500px;
 
             }
             div{
